[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dbmle"
version = "0.0.1"
description = "Design-based MLE for always taker, complier, defier, never taker counts from Z,D or 2x2 tables."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" },
  { name = "Other Name", email = "other@example.com"}
]
dependencies = [
  "tqdm>=4.0",
  "scipy>=1.5"
]

[project.urls]
Homepage = "https://github.com/yourname/dbmle"
Issues = "https://github.com/yourname/dbmle/issues"

[project.scripts]
dbmle = "dbmle.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



